[gd_scene load_steps=23 format=4 uid="uid://17wx3jdqs3le"]

[ext_resource type="Texture2D" uid="uid://cxyhm0m1gvi36" path="res://room1/room1_floor.png" id="1_a5wg4"]
[ext_resource type="Script" path="res://room1/room_1.gd" id="1_j7enj"]
[ext_resource type="Texture2D" uid="uid://dtrxo210vkk5n" path="res://walls/walls.png" id="3_fspv0"]
[ext_resource type="Texture2D" uid="uid://sva7uvtwg6ta" path="res://room1/receptionist_short.png" id="10_bo8aq"]
[ext_resource type="PackedScene" uid="uid://cbdnkjgthnkex" path="res://pop_up/pop_up.tscn" id="10_j3dt1"]
[ext_resource type="FontFile" uid="uid://dad653sjnvr6f" path="res://fonts/dogicapixel.ttf" id="11_285qc"]
[ext_resource type="Texture2D" uid="uid://doulnjwednx3i" path="res://room1/receptionist_tall.png" id="11_l6svf"]
[ext_resource type="Texture2D" uid="uid://befjg0r8hw71u" path="res://room1/desk.png" id="12_a0lli"]
[ext_resource type="PackedScene" uid="uid://byo5jn1nt53yv" path="res://player/player.tscn" id="14_wv7gx"]
[ext_resource type="Texture2D" uid="uid://m3bqm0526r8v" path="res://room1/chair.png" id="15_wkn5t"]
[ext_resource type="Texture2D" uid="uid://dqrr4jtwlt867" path="res://room1/table.png" id="16_4cwij"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_j3p04"]
texture = ExtResource("1_a5wg4")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0

[sub_resource type="TileSet" id="TileSet_xgmmy"]
sources/0 = SubResource("TileSetAtlasSource_j3p04")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_8d1p0"]
texture = ExtResource("3_fspv0")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 2.01083, 8, 2.01083, 8, 8, -8, 8)
0:1/0 = 0
0:1/0/physics_layer_1/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, -1.8125, -8, -1.9375)
1:1/0 = 0
1:1/0/physics_layer_4/polygon_0/points = PackedVector2Array(1.03125, -8, 8, -8, 8, 8, 1.09375, 8)
2:1/0 = 0
2:1/0/physics_layer_7/polygon_0/points = PackedVector2Array(-8, -8, -0.90625, -8, -0.96875, 8, -8, 8)
0:2/0 = 0
0:2/0/physics_layer_2/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, 0.96875, 8, 0.84375, -2, -8, -2)
1:2/0 = 0
1:2/0/physics_layer_5/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, -1.9375, -0.84375, -2, -0.90625, 8, -8, 8)
0:3/0 = 0
0:3/0/physics_layer_3/polygon_0/points = PackedVector2Array(-8, 1.875, 1.03125, 2, 1.03125, -8, 8, -8, 8, 8, -8, 8)
1:3/0 = 0
1:3/0/physics_layer_6/polygon_0/points = PackedVector2Array(-8, -8, -0.96875, -8, -0.96875, 2.0625, 8, 2.0625, 8, 8, -8, 8)

[sub_resource type="TileSet" id="TileSet_pcaud"]
physics_layer_0/collision_layer = 1
physics_layer_0/collision_mask = 2
physics_layer_1/collision_layer = 1
physics_layer_1/collision_mask = 2
physics_layer_2/collision_layer = 1
physics_layer_2/collision_mask = 2
physics_layer_3/collision_layer = 1
physics_layer_3/collision_mask = 2
physics_layer_4/collision_layer = 1
physics_layer_4/collision_mask = 2
physics_layer_5/collision_layer = 1
physics_layer_5/collision_mask = 2
physics_layer_6/collision_layer = 1
physics_layer_6/collision_mask = 2
physics_layer_7/collision_layer = 1
physics_layer_7/collision_mask = 2
sources/10 = SubResource("TileSetAtlasSource_8d1p0")

[sub_resource type="SpriteFrames" id="SpriteFrames_oxj80"]
animations = [{
"frames": [{
"duration": 0.15,
"texture": ExtResource("10_bo8aq")
}, {
"duration": 1.0,
"texture": ExtResource("10_bo8aq")
}, {
"duration": 1.0,
"texture": ExtResource("11_l6svf")
}, {
"duration": 1.0,
"texture": ExtResource("11_l6svf")
}, {
"duration": 1.0,
"texture": ExtResource("10_bo8aq")
}, {
"duration": 1.0,
"texture": ExtResource("10_bo8aq")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_3uqma"]
radius = 8.0
height = 24.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gt087"]
size = Vector2(64, 12.8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4hq2a"]
size = Vector2(12, 13)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qhomk"]
size = Vector2(14, 21.0499)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_koiod"]
size = Vector2(23, 6.00002)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_lsqmk"]

[node name="Room1" type="Node2D"]
position = Vector2(-3739, -1979)
scale = Vector2(5, 5)
script = ExtResource("1_j7enj")

[node name="Floor" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAA/ACQAAAACAAEAAAA/ACMAAAACAAEAAAA/ACIAAAACAAEAAAA/ACEAAAACAAEAAAA/ACAAAAACAAEAAAA/AB8AAAACAAEAAAA+ACQAAAACAAEAAAA+ACMAAAACAAEAAAA+ACIAAAACAAEAAAA+ACEAAAACAAEAAAA+ACAAAAACAAEAAAA+AB8AAAACAAEAAAA9ACQAAAACAAEAAAA9ACMAAAACAAEAAAA9ACIAAAACAAEAAAA9ACEAAAACAAEAAAA9ACAAAAACAAEAAAA9AB8AAAACAAEAAAA8ACQAAAACAAEAAAA8ACMAAAACAAEAAAA8ACIAAAACAAEAAAA8ACEAAAACAAEAAAA8ACAAAAACAAEAAAA8AB8AAAACAAEAAAA7ACQAAAACAAEAAAA7ACMAAAACAAEAAAA7ACIAAAACAAEAAAA7ACEAAAACAAEAAAA7ACAAAAACAAEAAAA7AB8AAAACAAEAAAA6ACQAAAACAAEAAAA6ACMAAAACAAEAAAA6ACIAAAACAAEAAAA6ACEAAAACAAEAAAA6ACAAAAACAAEAAAA6AB8AAAACAAEAAAA5ACQAAAACAAEAAAA5ACMAAAACAAEAAAA5ACIAAAACAAEAAAA5ACEAAAACAAEAAAA5ACAAAAACAAEAAAA5AB8AAAACAAEAAAA4ACQAAAACAAEAAAA4ACMAAAACAAEAAAA4ACIAAAACAAEAAAA4ACEAAAACAAEAAAA4ACAAAAACAAEAAAA4AB8AAAACAAEAAAA3AB8AAAACAAEAAAA3ACAAAAACAAEAAAA3ACEAAAACAAEAAAA3ACIAAAACAAEAAAA3ACMAAAACAAEAAAA3ACQAAAACAAEAAAA3ACUAAAACAAEAAAA4ACUAAAACAAEAAAA5ACUAAAACAAEAAAA6ACUAAAACAAEAAAA7ACUAAAACAAEAAAA8ACUAAAACAAEAAAA9ACUAAAACAAEAAAA+ACUAAAACAAEAAAA/ACUAAAACAAEAAABAAB8AAAACAAEAAABAACAAAAACAAEAAABAACEAAAACAAEAAABAACIAAAACAAEAAABAACMAAAACAAEAAABAACQAAAACAAEAAABAACUAAAACAAEAAAA2AB8AAAACAAEAAAA2ACAAAAACAAEAAAA2ACEAAAACAAEAAAA2ACIAAAACAAEAAAA2ACMAAAACAAEAAAA2ACQAAAACAAEAAAA2ACUAAAACAAEAAAA1AB8AAAACAAEAAAA1ACAAAAACAAEAAAA1ACEAAAACAAEAAAA1ACIAAAACAAEAAAA1ACMAAAACAAEAAAA1ACQAAAACAAEAAAA1ACUAAAACAAEAAAA=")
tile_set = SubResource("TileSet_xgmmy")

[node name="Walls" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAA3ACUACgAAAAAAAAA4ACUACgAAAAAAAAA5ACUACgAAAAAAAABAACUACgAAAAMAAAA8ACUACgAAAAAAAAA9ACUACgAAAAAAAAA+ACUACgAAAAAAAAA/ACUACgAAAAAAAABAAB8ACgABAAEAAABAACAACgABAAEAAABAACEACgABAAEAAABAACIACgABAAEAAABAACMACgABAAEAAABAACQACgABAAEAAAA1AB8ACgACAAEAAAA1ACAACgACAAEAAAA1ACEACgACAAEAAAA1ACIACgACAAEAAAA1ACMACgACAAEAAAA1ACQACgACAAEAAAA1ACUACgABAAMAAAA2ACUACgAAAAAAAAA=")
tile_set = SubResource("TileSet_pcaud")

[node name="Receptionist" type="CharacterBody2D" parent="."]
collision_mask = 2

[node name="ReceptionistSprite" type="AnimatedSprite2D" parent="Receptionist"]
position = Vector2(943.4, 500.7)
scale = Vector2(0.01, 0.01)
sprite_frames = SubResource("SpriteFrames_oxj80")
frame_progress = 0.4336

[node name="CollisionShape2D" type="CollisionShape2D" parent="Receptionist"]
position = Vector2(943.4, 500.7)
shape = SubResource("CapsuleShape2D_3uqma")

[node name="Desk" type="CharacterBody2D" parent="."]
collision_mask = 2

[node name="DeskSprite" type="Sprite2D" parent="Desk"]
position = Vector2(944.4, 511.7)
scale = Vector2(0.01, 0.01)
texture = ExtResource("12_a0lli")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Desk"]
position = Vector2(944.4, 508.6)
shape = SubResource("RectangleShape2D_gt087")

[node name="CharacterBody2D" type="CharacterBody2D" parent="."]
position = Vector2(910.4, 566.4)
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="CharacterBody2D"]
texture = ExtResource("16_4cwij")

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D"]
shape = SubResource("RectangleShape2D_4hq2a")

[node name="Chair" type="CharacterBody2D" parent="."]
position = Vector2(0, -0.399994)

[node name="ChairSprite" type="Sprite2D" parent="Chair"]
position = Vector2(895.4, 562.7)
texture = ExtResource("15_wkn5t")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Chair"]
position = Vector2(895.4, 562.725)
shape = SubResource("RectangleShape2D_qhomk")

[node name="Chair2" type="CharacterBody2D" parent="."]
position = Vector2(21.3999, 1.40002)

[node name="ChairSprite" type="Sprite2D" parent="Chair2"]
position = Vector2(904, 561)
texture = ExtResource("15_wkn5t")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Chair2"]
position = Vector2(904, 561)
shape = SubResource("RectangleShape2D_qhomk")

[node name="ReceptionQuestion" type="Area2D" parent="."]
position = Vector2(942.4, 533.7)
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="ReceptionQuestion"]
position = Vector2(1.5, -28.3)
shape = SubResource("RectangleShape2D_koiod")

[node name="Player" parent="." instance=ExtResource("14_wv7gx")]
position = Vector2(943, 594.6)

[node name="PopUp" parent="." instance=ExtResource("10_j3dt1")]
visible = false
offset_left = 828.8
offset_top = 518.2
offset_right = 1058.8
offset_bottom = 609.2

[node name="Label" type="Label" parent="."]
offset_left = 896.6
offset_top = 480.0
offset_right = 990.6
offset_bottom = 486.0
theme_override_fonts/font = ExtResource("11_285qc")
theme_override_font_sizes/font_size = 6
theme_override_styles/normal = SubResource("StyleBoxEmpty_lsqmk")
text = "Press [E] to interact"

[connection signal="popup_close" from="." to="Player" method="_on_room_1_popup_close"]
[connection signal="popup_open" from="." to="Player" method="_on_room_1_popup_open"]
[connection signal="body_entered" from="ReceptionQuestion" to="." method="_on_reception_question_body_entered"]
[connection signal="body_exited" from="ReceptionQuestion" to="." method="_on_reception_question_body_exited"]
[connection signal="interact" from="Player" to="." method="_on_player_interact"]
[connection signal="no_interact" from="Player" to="." method="_on_player_no_interact"]
[connection signal="go_back" from="PopUp" to="." method="_on_pop_up_go_back"]
[connection signal="option1" from="PopUp" to="." method="_on_pop_up_option_1"]
[connection signal="option2" from="PopUp" to="." method="_on_pop_up_option_2"]
[connection signal="option3" from="PopUp" to="." method="_on_pop_up_option_3"]
